--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: tahoma, sans-serif;
   color:#282828;
@@ -12,8 +16,12 @@ body {
 
 .product {
   display: flex;
-  flex-flow: wrap;
+  flex-direction: column;
   padding: 1rem;
+}
+
+.top-information {
+  display: flex;
 }
 
 img {
@@ -35,6 +43,14 @@ img {
 .cart {
   margin-right: 25px;
   float: right;
+  border: 1px solid #D8D8D8;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.removeCart {
+  width: 50px;
+  
 }
 
 .color-box {
@@ -62,4 +78,38 @@ button {
 .disabledButton {
   background-color: #D8D8D8;
   cursor: default;
+}
+
+.review-form {
+  width: 400px;
+  padding: 20px;
+  margin: 40px;
+  border: 1px solid #D8D8D8;
+  border-radius: 4px;
+}
+
+input {
+  width: 100%;
+  height: 25px;
+  margin: 8px 0 20px;
+  border-radius: 4px;
+  border: 1px solid rgb(118, 118, 118);
+  padding: 20px 15px;
+}
+
+textarea {
+  width: 100%;
+  height: 60px;
+  margin: 8px 0 20px;
+  border-radius: 4px;
+  padding: 10px 15px;
+}
+
+.buttonForm input {
+  height: 50px;
+  cursor: pointer;
+}
+
+.reviews li {
+  margin-bottom: 40px;
 }
